# msc2d

./: CMakeLists.txt  readme
data/: bunny.sf  fandisk.sf  fertility.sf  moai.msc  moai.sf  torus.msc  torus.sf
src/common/: CMakeLists.txt  color.h  macro.h  types.h  vec2d.h  vec3d.h
src/main/: CMakeLists.txt  main.cpp
src/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshBasicOp.cpp  MeshBasicOp.h  MeshElement.h  MeshIO.cpp  MeshIO.h  MeshInfo.cpp  MeshInfo.h  MeshKernel.cpp  MeshKernel.h
src/msc2d/: CMakeLists.txt  critical_point_finder.cc  critical_point_finder.h  dual_mscomplex_generator.cc  dual_mscomplex_generator.h  integration_line_tracer.cc  integration_line_tracer.h  intergration_line_tracer.cc  intergration_line_tracer.h  msc2d_simplification.cc  msc2d_simplification.h  msc_wrapper.cc  msc_wrapper.h  mscell_generator.h  mscomplex.cc  mscomplex.h  quad_patch_generator.cc  quad_patch_generator.h  quad_patch_genertor.cc
src/util/: CMakeLists.txt  heap.cpp  heap.h  hsvcolor.cpp  hsvcolor.h  stopwatch.cpp  stopwatch.h  utility.cpp  utility.h
